# wgpu-playground

./: Cargo.toml
0-showing-window/: Cargo.toml
0-showing-window/src/: main.rs
1-triangle/: Cargo.toml
1-triangle/src/: main.rs
1-triangle/src/shaders/: shader.wgsl
2-triangle-buffer/: Cargo.toml
2-triangle-buffer/src/: main.rs  vertex.rs
2-triangle-buffer/src/shaders/: shader.wgsl
3-triangle-texture/: Cargo.toml
3-triangle-texture/src/: main.rs  vertex.rs
4-depth-texture/: Cargo.toml
4-depth-texture/src/: main.rs  pipeline.rs  vertex.rs
4-depth-texture/src/shaders/: depth.wgsl
5-resources-ecs/: Cargo.toml
5-resources-ecs/src/: gpu.rs  main.rs  texture.rs  time.rs  uniform.rs
5-resources-ecs/src/pipeline/: depth.rs  diffuse.rs  mod.rs  present.rs  render.rs
5-resources-ecs/src/shaders/: depth.wgsl  present.wgsl  shader.wgsl
6-egui-ui/: Cargo.toml  build.rs
6-egui-ui/src/: debouncer.rs  gpu.rs  main.rs  pass.rs  texture.rs  ui.rs  uniform.rs  vertex.rs
6-egui-ui/src/pipeline/: depth.rs  diffuse.rs  mod.rs  present.rs  render.rs  ui.rs
6-egui-ui/src/shaders/: depth.rs  diffuse.rs  mod.rs  present.rs  present.wgsl
docs/: useful-libraries.md
scripts/: pack.py
