[workspace]
members = ["0-showing-window", "1-triangle", "2-triangle-buffer"]
resolver = "2"

[workspace.dependencies]
wgpu = "23.0.0"
glam = "0.29.2"
winit = "0.30.5"
pollster = "0.4.0"
anyhow = "1.0.93"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
better-panic = "0.3.0"
bytemuck = { version = "1.20.0", features = ["derive"] }
