[workspace]
members = [
    "0-showing-window",
    "1-triangle",
    "2-triangle-buffer",
    "3-triangle-texture",
    "4-depth-texture",
    "5-resources-ecs",
    "6-egui-ui",
]
resolver = "2"

[workspace.dependencies]
wgpu = "23.0.0"
glam = "0.29.2"
winit = "0.30.5"
pollster = "0.4.0"
anyhow = "1.0.93"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
better-panic = "0.3.0"
bytemuck = { version = "1.20.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
generational-cache = "0.2.2"
tracing-tracy = "0.11.3"
bevy_ecs = { version = "0.15.0", features = ["trace"] }
egui-wgpu = "0.30.0"
egui-winit = "0.30.0"
egui_demo_lib = "0.30.0"
epi = "0.17.0"
egui = "0.30.0"
encase = { version = "0.10.0", features = ["glam"] }

[workspace.dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg"]

[profile.release]
debug = true
