[package]
name = "triangle-texture"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
better-panic = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
